fixed new button div that was too wide for mobile

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -178,8 +178,8 @@ footer {
 .create-new-item {
     clear: both;
     margin: 1em auto;
-    width: 25em;
-    padding-bottom: 4em;
+    // width: 25em;
+    // padding-bottom: 4em;
     text-align: center;
 
     & ul {
